# opengl-playground

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: camera.hpp  light.hpp  material.hpp  model.hpp  object.hpp  shader.hpp  texture.hpp
include/glad/: glad.h
models/: box.tris  small_box.tris  test.tris
shaders/: light.frag.glsl  light.vert.glsl  lighting.frag.glsl  lighting.vert.glsl  nonlight.frag.glsl  nonlight.vert.glsl  shader.fs  shader.vs  source.frag.glsl  source.vert.glsl  tri.fs  tri.vs
src/: camera.cpp  glad.c  model.cpp  shader.cpp  solitaire-window.cpp  texture.cpp
